--- a/BillingSoftware/Dockerfile
+++ b/BillingSoftware/Dockerfile
@@ -1,12 +1,13 @@
-FROM openjdk:17-jdk-slim
+FROM eclipse-temurin:21-jdk-jammy
 
 WORKDIR /app
 
-COPY pom.xml .
-COPY src ./src
+COPY . .
 
+RUN chmod +x mvnw
 RUN ./mvnw clean package -DskipTests
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "target/*.jar"]
+CMD ["java","-jar","target/*.jar"]
+
