--- a/BillingSoftware/Dockerfile
+++ b/BillingSoftware/Dockerfile
@@ -1,13 +1,16 @@
-FROM eclipse-temurin:21-jdk-jammy
+# Use official OpenJDK image
+FROM openjdk:17-jdk-slim
 
+# Set working directory
 WORKDIR /app
 
-COPY . .
+# Copy the Spring Boot jar into the container
+COPY target/BillingSoftware-0.0.1-SNAPSHOT.jar app.jar
 
-RUN chmod +x mvnw
-RUN ./mvnw clean package -DskipTests
-
+# Expose port (same as Spring Boot default)
 EXPOSE 8080
 
-CMD ["java","-jar","target/*.jar"]
+# Command to run the jar
+CMD ["java", "-jar", "app.jar"]
+]
 
